<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="action_settings">Settings</string>
    <string name="login_benutzername">Benutzername</string>
    <string name="login_passwort">Passwort</string>
    <string name="login_button">Login</string>
    <string name="eigenes_profilbild">Profilbild</string>
    <string name="login_speichern">Benutzername speichern?</string>
    <string name="profil_benutzername">Benutzername</string>
    <string name="profil_status">Status</string>
    <string name="profil_gruppe">Gruppe</string>
    <string name="profil_geschlecht">Geschlecht</string>
    <string name="profil_alter">Alter</string>
    <string name="profil_single">Single</string>
    <string name="profil_wohnort">Wohnort</string>
    <string name="profil_dabei">Dabei seit</string>
    <string name="freund_zuletzt_online">Zuletzt online:</string>
    <string name="comments_more">Mehr Kommentare laden...</string>
    <string name="pns_more">Mehr Nachrichten laden...</string>
    <string name="neuer_kommentar">Neuer Kommentar</string>
    <string name="neuer_post">Neuer Beitrag</string>
    <string name="new_comment_text">Kommentar eingeben...</string>
    <string name="new_post_text">Beitrag eingeben...</string>
    <string name="new_comment_send">Senden</string>
    <string name="comment_delete">Kommentar löschen</string>
    <string name="comment_spoiler">Spoiler anzeigen/ausblenden</string>
    <string name="comment_copy">Kommentartext kopieren</string>
    <string name="comment_edit">Kommentar editieren</string>
    <string name="comment_profil_besuchen">Profil aufrufen</string>
    <string name="new_pn_text">Nachricht eingeben...</string>
    <string name="new_pn_send">Senden</string>
    <string name="new_pn_delete">Löschen</string>
    <string name="new_pn_profil">Zum Absender</string>
    <string name="pn_delete">Nachricht löschen</string>
    <string name="aktualisieren">Aktualisieren</string>
    <string name="pn_profil_besuchen">Profil des Absenders</string>
    <string name="overflow">Mehr</string>
    <string name="add_friend">Freund hinzufügen</string>
    <string name="delete_friend">Freund löschen</string>
    <string name="accept_friend">Annehmen</string>
    <string name="decline_friend">Ablehnen</string>
    <string name="search_user">Benutzer suchen...</string>
    <string name="search_button">Suchen</string>
    <string name="error_101">Fehler 101: Fehler im HTTP-Protokoll.</string>
    <string name="error_301">Fehler 301: Verbindung konnte nicht hergestellt werden</string>
    <string name="error_302">Fehler 302: Daten konnten nicht geladen werden.</string>
    <string name="error_303">Fehler 303: Stream wurde bereits geschlossen.</string>
    <string name="error_401">Fehler 401: User-ID not found.</string>
    <string name="error_402">Fehler 402: Ungültige Profil-URL.</string>
    <string name="error_unknown">Unbekannter Fehler durch: </string>
    <string name="profil_beschreibung">Beschreibung</string>
    <string name="profil_kommentare">Kommentare</string>
    <string name="profil_animeliste">Animeliste</string>
    <string name="profil_freunde">Freunde</string>
    <string name="profil_pns">Private Nachrichten</string>
    <string name="foren_detail_image">Forenimage</string>
    <string name="info_copyright">© BtcDev 2013 — 2014</string>
    <string name="threads_pages">Seite: </string>
    <string name="forum_registriert_seit">Registriert seit:</string>
    <string name="post_edit">Beitrag editieren</string>
    <string name="post_delete">Beitrag löschen</string>
    <string name="post_spoiler">Spoiler anzeigen/ausblenden</string>
    <string name="post_profil">Profil aufrufen</string>
    <string name="post_zitieren">Beitrag zitieren</string>
    <string name="post_copy">Beitrag kopieren</string>
    <string name="new_post_send">Absenden</string>
    <string name="status">Status</string>
    <string name="user_image">Avatar</string>

</resources>