<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:support="http://schemas.android.com/apk/res-auto" >

    <item
        android:id="@+id/new_pn_send"
        android:orderInCategory="100"
        android:title="@string/new_pn_send"
        support:showAsAction="always"
        tools:ignore="AlwaysShowAction" />
    <item
        android:id="@+id/new_pn_overflow"
        android:icon="@drawable/ic_action_overflow"
        android:orderInCategory="101"
        android:title="@string/overflow"
        support:showAsAction="always"
        tools:ignore="AlwaysShowAction">
        <menu>
            <item
                android:id="@+id/new_pn_delete"
                android:icon="@drawable/ic_action_discard"
                android:orderInCategory="102"
                android:title="@string/new_pn_delete"
                support:showAsAction="never"/>
            <item
                android:id="@+id/new_pn_profil"
                android:icon="@drawable/ic_drawer_profil"
                android:orderInCategory="103"
                android:title="@string/new_pn_profil"
                support:showAsAction="never"/>
            <item
                android:id="@+id/new_pn_spoiler"
                android:icon="@drawable/ic_action_expand"
                android:orderInCategory="104"
                android:title="@string/comment_spoiler"
                support:showAsAction="never"/>
        </menu>
    </item>

</menu>