<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:support="http://schemas.android.com/apk/res-auto" >

    <item
        android:id="@+id/fremdes_profil_aktualisieren"
        android:icon="@drawable/ic_action_refresh"
        android:orderInCategory="100"
        android:title="@string/aktualisieren"
        support:showAsAction="always"
        tools:ignore="AlwaysShowAction" />
    <item
        android:id="@+id/new_pn_overflow"
        android:icon="@drawable/ic_action_overflow"
        android:orderInCategory="101"
        android:title="@string/overflow"
        support:showAsAction="always"
        tools:ignore="AlwaysShowAction">
        <menu>
            <item
                android:id="@+id/fremdes_profil_add"
                android:icon="@drawable/ic_action_add_person"
                android:orderInCategory="102"
                android:title="@string/add_friend"
                support:showAsAction="never"/>
            <item
                android:id="@+id/fremdes_profil_delete"
                android:icon="@drawable/ic_action_discard"
                android:orderInCategory="103"
                android:title="@string/delete_friend"
                android:visible="false"
                support:showAsAction="never"/>
        </menu>
    </item>

</menu>